# beezle-re

./: .gitignore  .prettierrc  README.md  TODO  a.json  index.js  logcertfile  package-lock.json  package.json  test.json
backend/: Cargo.toml  curl.sh  env_example.txt  mongoose_example.txt  server.ts  test.rest
backend/dm-server/: DM.ts  UserType.ts  mongoose.ts  package-lock.json  package.json  server.ts
backend/dm-server/models/: DM.ts  User.ts
backend/dm-server/schema/: MessageDM.ts
backend/src/: data_struct.rs  main.rs  poison.rs
backend/src/beezle/: auth.rs  crypt.rs  mail.rs  mod.rs  mongo.rs  print.rs
backend/src/mongoose/: coins.rs  create.rs  delete.rs  get.rs  get_many.rs  hives.rs  insert.rs  milestones.rs  mod.rs  update.rs  xp.rs
backend/src/mongoose/structures/: auth.rs  blocked_user.rs  dm_gc.rs  dm_msg.rs  dm_selections.rs  hashtag.rs  hive.rs  mod.rs  poll.rs  post.rs  reactions.rs  report.rs  user.rs  user_notif.rs
backend/src/routes/: echo.rs  main_route.rs  mod.rs
backend/src/routes/api/: change_about_me.rs  change_avatar.rs  change_banner.rs  change_username.rs  edit_profile.rs  get_reports.rs  get_user.rs  get_user_many.rs  get_user_public.rs  is_verified.rs  login_user.rs  mod.rs  register_user.rs  report.rs  reset_password.rs  resolve_report.rs  verification.rs  verify_pass.rs
backend/src/routes/api/connections/: discord_auth.rs  mod.rs  remove_discord.rs  spotfiy_auth.rs  spotfiy_disconnect.rs  spotify_refresh_token.rs  spotify_status.rs  steam_auth.rs  steam_disconnect.rs  steam_get.rs  steam_get_game.rs  steam_get_inventory.rs
backend/src/routes/api/dms/: create_gc.rs  create_selection.rs  delete_selection.rs  edit_gc.rs  gc_add_member.rs  (+6 more)
backend/src/routes/ws/: mod.rs  socket.rs  structs.rs
backend/src/ws/: mod.rs  spawn.rs
backend/src/ws/channels/: connection.rs  mod.rs  notification.rs
backend/src/ws/lib/: send.rs
backend/src/ws/structures/: mod.rs  notification_data.rs  user_data.rs  ws_data.rs
(+283 files in other folders)
