[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
colored = "2.1.0"
mongodb = "2.3.1"
serde_json = "1.0.113"
