[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
colored = "2.1.0"
mongodb = "2.3.1"
serde_json = "1.0.113"
jsonwebtoken = "9.2.0"
chrono = "0.4.33"
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
password-hash = "0.5.0"
crypto = "0.5.1"
rand = "0.8.5"
bcrypt = "0.15.0"
mail-send = "0.4.6"
actix-multipart = "0.6.1"
