[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
colored = "2.1.0"
mongodb = "2.3.1"
serde_json = "1.0.113"
jsonwebtoken = "9.2.0"
chrono = "0.4.33"
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
password-hash = "0.5.0"
crypto = "0.5.1"
rand = "0.8.5"
bcrypt = "0.15.0"
mail-send = "0.4.6"
actix-multipart = "0.6.1"
actix-cors = "0.7.0"
futures = "0.3.30"
socketioxide = "0.10.2"
actix = "0.13.2"
env_logger = "0.11.1"
anyhow = "1.0"
actix-ws = "0.2.0"
actix-rt = "2.9.0"
regex = "1.10.3"
actix-web-middleware-redirect-https = "3.0.1"
steam-connect = "1.3.0"
reqwest = { version = "0.11", features = ["json", "rustls"] }
